코드 수정 및 테스트 코드 서비스 키 Github action에 등록